# book-app

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  Software Design.docx  Software Requirements.docx  flake.nix  shell.nix
.sqlx/: query-06e3d8c275ccb0484c60de850bed78efd9f936c917dcf7d9bc88d66d1137cdc1.json  query-155c1c51343fa7e3953ea4218ad0127fe57c75eade8099cd10559e634f05578d.json  query-1aa349f6c4724effbfbe125fccbfa04b62a0719c5be54d2dffb5a61b3fc0e852.json  query-1f0b40e2cfba2561b0752ca428ebb5c77f5487ab9de5fb75295cd77316c3b193.json  query-24d451e7d0e9e7f34aa86d3c17ff571f18b0b27ff7f86e94e29475e78a252b0f.json  query-2895e25a39ef3ab7b6c962f1b1a5226ec89049b926da918d5fb04e96a9a24a04.json  query-32ed1af157a34241e06e8676789c1eb23f453d54ecc2444880f36c51585743ee.json  query-3d9cd824d1c78e95384eb5aa7a1b6502cdd54d54b9e339f9773a7f1068f7490f.json  query-40b68c1f18335d2e54321d3b8284d16e2209482aec416bbf5a5e0d94b654c86e.json  query-45a42350ef52a748744d9b3dca533c955b6281f76e9a69cc7be6dccfca65e590.json  query-48f057a54ef18a6b3fe4ee499ca7f14f818a59b9abe27a75267dabb648d12243.json  query-6bc6ee9216a4909f30b8a2e41c6a842794869212ebf65eb6617a67328e6cea59.json  query-7181d7f3914931df83fca86bea94811b30246b1a3840213d1920c562db58552f.json  query-79ee796c4cca5993d4b7397395cd441cb34bb96237784401e5efe77930b20b3f.json  query-93d4249cfc2257594c8eedf44c00958e0b0b1a9012ddbb2d3ebe4cff7c1cb51c.json  query-961b25c00ff2918020c2f82089c7667320e1ca1325ccd9b3142dad078f433956.json  query-9b4f73dac6f22fcf681bcd7fd385948e69d5a0fcddcb45979bdeb8ab43cd8684.json  query-b7b75290391221cd5a83485e0bbe2f2cc11957de9f840c3de449cc15a10fea13.json  query-cabb74d673f392e0874136c003eaceed870bb97c14059b95c67c116adb68c335.json  query-da9bd29fb3447566231f3ebbfe1296cf3212352fedb209cbad019cff3e787a6e.json  query-df3ad3deaa868a309d9fd0235a3858414ff7a11272c9024edcaaa024f48b8f70.json  query-dff2220fa5683ce774614a75855db8bf834927e2747aa845e726678926817df5.json  query-e57f9b6912abacbb7fe71fc65b6bb438ed49d94324d2f067d59079aeb52a51ae.json  query-f5b6041991c715e9ed9d440da23b92c1a95e07a199a31e5340297039672ae753.json
src/: app.rs  db.rs  lib.rs  main.rs  new_requests.rs  old_main.rs  requests.rs  schema.sql
