[package]
name = "book-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goodreads-api = {path = "goodreads-api"}
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "macros", "chrono", "bigdecimal"] }
tokio = { version = "1.34", features = ["full"] }
chrono = { version = "0.4.31" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
calamine = "0.23"

egui_extras = { version = "0.23.0", features = ["datepicker", "all_loaders"] }

env_logger = "0.10"
ehttp = "0.3.1"
poll-promise = "0.3.0"
egui_demo_lib = "0.23.0"
glutin = "0.31.2"
itertools = "0.12.0"
dylib = "0.0.3"
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
