[package]
name = "book-app"
version = "0.1.0"
authors = ["Luca Antonelli <luca.antonelli@gmx.ch>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goodreads-api = { path = "goodreads-api" }
dotenv = "0.15.0"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "bigdecimal",
] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.40" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
] }
log = "0.4.27"
winit = { version = "0.30.9", features = ["wayland"] }

egui_extras = { version = "0.31.1", features = ["datepicker", "all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
env_logger = "0.11.8"
glutin = "0.32.2"
egui-file-dialog = "0.9.0"
js-sys = "0.3.77"
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
